- Bucket4j Dependency hinzugefügt (pom.xml) - LoginRateLimiterService implementiert - Integration in AuthController.login() erfolgt - Custom Exception TooManyLoginAttemptsException erstellt - GlobalExceptionHandler erweitert - Integration-Tests geschrieben